--- a/presets/coin.yaml
+++ b/presets/coin.yaml
@@ -59,3 +59,31 @@ presets:
   sort:
     sortBy: close
     sortOrder: desc
+- name: coin_development_activity
+  filter:
+  - left: github_commits
+    operation: greater
+    right: 1
+  sort:
+    sortBy: github_commits
+    sortOrder: desc
+- name: coin_highest_supply
+  sort:
+    sortBy: circulating_supply
+    sortOrder: desc
+- name: coin_most_addresses_active
+  filter:
+  - left: addresses_active
+    operation: greater
+    right: 1
+  sort:
+    sortBy: addresses_active
+    sortOrder: desc
+- name: coin_most_addresses_with_balance
+  filter:
+  - left: total_addresses_with_balance
+    operation: greater
+    right: 1
+  sort:
+    sortBy: total_addresses_with_balance
+    sortOrder: desc
